--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,5 +1,4 @@
-@charset "utf-8";
-
+ @charset "utf-8";
 @import url(' https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500;6..12,600&display=swap');
 
 * {
@@ -19,27 +18,66 @@ body {
     background-color: #282c34;
     color: #fff;
     margin: 0;
-    background-image: url("../img/bag.avif");
+    background-image: url("../img/cool-geometric-triangular-figure-neon-laser-light-great-backgrounds.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     font-weight: 500;
+    background-attachment: fixed;
 }
 
-#game-container,
-#score-container {
+body,
+h1,
+h2,
+h3,
+p,
+div {
+    margin: 0;
+    padding: 0;
+}
+
+body,
+html {
+    overflow: hidden;
+}
+
+#game-container {
     max-width: 600px;
-    margin: 50px auto;
-    background-color: #5d4e77;
+    margin: 130px auto;
+    background-color: #573591;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     opacity: 0.9;
+    line-height: 1.3;
+    display: block;
+    height: 400px;
+}
+
+#score-container {
+    max-width: 600px;
+    margin: 130px auto;
+    background-color: #573591;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    opacity: 0.9;
+    display: flex;
+    flex-direction: row;
+    height: 400px;
+    line-height: 1.5;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 70px;
 }
 
 h1 {
     font-size: 36px;
-    margin-bottom: 20px;
+    margin-bottom: 1px;
     color: #b39ae2;
 }
 
@@ -57,25 +95,10 @@ button {
 
 button:hover {
     background-color: #b06ab3;
-    transform: scale(1.05);
-}
-
-button:hover {
-    background-position: 100% 0;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-    background-image: linear-gradient(to right, #2a1f8d, #f5a9ff, #1613a8, #c45959);
-
 }
 
 button:focus {
     outline: none;
-}
-
-button {
-    background-image: linear-gradient(to right, #6253e1, #852D91, #A3A1FF, #F24645);
-    box-shadow: 0 4px 15px 0 rgba(126, 52, 161, 0.75);
 }
 
 input {
@@ -91,7 +114,7 @@ input {
 
 #word-display {
     font-size: 28px;
-    margin-top: 40px;
+    margin-top: 10px;
     font-weight: 600;
     color: #ff57a1;
 }
@@ -132,4 +155,125 @@ h2 {
 
 #end-btn {
     display: none;
+}
+
+#restart-btn2 {
+    margin-top: 40px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #b35ba3;
+    margin: auto;
+    padding: 20px;
+    /* border: 1px solid #888; */
+    width: 100%;
+    color: #080808;
+}
+
+.close-btn {
+    color: #080808;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Style for the modal */
+#scoreboard-modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #b35ba3;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+    max-width: 30%;
+    max-height: 50%;
+    color: #fff;
+    text-align: center;
+    animation: fadeIn 0.5s ease-in-out;
+
+}
+
+/* Style for the close button */
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    color: #fff;
+}
+
+/* Style for the list items */
+#scoreList {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#scoreList li {
+    background-color: #2ecc71;
+    color: #fff;
+    margin: 5px 0;
+    padding: 10px;
+    border-radius: 5px;
+    animation: fadeInUp 0.5s ease-in-out;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#scoreList li:nth-child(even) {
+    background-color: #3498db;
+}
+
+#scoreList li:hover {
+    background-color: #2980b9;
+    transform: scale(1.05);
+    transition: transform 0.3s ease-in-out;
+}
+
+/* Keyframe animations */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
